{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 197,
  "lineage": "4fc0933b-6336-7c95-bdfd-385ea92b5588",
  "resources": [
    {
      "module": "module.gerador-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:security-group/sg-07c1e9c6c931763e5",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-07c1e9c6c931763e5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-016f5b7c5cf5e792c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "gerador-dev-cluster-20240630061539496400000009",
            "name_prefix": "gerador-dev-cluster-",
            "owner_id": "637423345847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gerador-dev-cluster"
            },
            "tags_all": {
              "Name": "gerador-dev-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gerador-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:security-group/sg-016f5b7c5cf5e792c",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016f5b7c5cf5e792c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c1e9c6c931763e5"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c1e9c6c931763e5"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c1e9c6c931763e5"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c1e9c6c931763e5"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c1e9c6c931763e5"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c1e9c6c931763e5"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "gerador-dev-node-2024063006153950490000000a",
            "name_prefix": "gerador-dev-node-",
            "owner_id": "637423345847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gerador-dev-node",
              "kubernetes.io/cluster/gerador-dev": "owned"
            },
            "tags_all": {
              "Name": "gerador-dev-node",
              "kubernetes.io/cluster/gerador-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gerador-dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1074685138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07c1e9c6c931763e5",
            "security_group_rule_id": "sgr-07aaf01a82234be5d",
            "self": false,
            "source_security_group_id": "sg-016f5b7c5cf5e792c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gerador-dev.aws_security_group.cluster",
            "module.gerador-dev.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gerador-dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3060733748",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-016f5b7c5cf5e792c",
            "security_group_rule_id": "sgr-07269f470f0cedc49",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gerador-dev.aws_security_group.cluster",
            "module.gerador-dev.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-10714059",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016f5b7c5cf5e792c",
            "security_group_rule_id": "sgr-07c6cebee0229ca6f",
            "self": false,
            "source_security_group_id": "sg-07c1e9c6c931763e5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gerador-dev.aws_security_group.cluster",
            "module.gerador-dev.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1839773122",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016f5b7c5cf5e792c",
            "security_group_rule_id": "sgr-0a114a056588dd968",
            "self": false,
            "source_security_group_id": "sg-07c1e9c6c931763e5",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gerador-dev.aws_security_group.cluster",
            "module.gerador-dev.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2766852692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016f5b7c5cf5e792c",
            "security_group_rule_id": "sgr-0de19826996069085",
            "self": false,
            "source_security_group_id": "sg-07c1e9c6c931763e5",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gerador-dev.aws_security_group.cluster",
            "module.gerador-dev.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3082219125",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016f5b7c5cf5e792c",
            "security_group_rule_id": "sgr-00de2481ca8bfa380",
            "self": false,
            "source_security_group_id": "sg-07c1e9c6c931763e5",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gerador-dev.aws_security_group.cluster",
            "module.gerador-dev.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3541556670",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016f5b7c5cf5e792c",
            "security_group_rule_id": "sgr-0aa7b6af90475813e",
            "self": false,
            "source_security_group_id": "sg-07c1e9c6c931763e5",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gerador-dev.aws_security_group.cluster",
            "module.gerador-dev.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2077252537",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016f5b7c5cf5e792c",
            "security_group_rule_id": "sgr-018b28a3f1c974500",
            "self": false,
            "source_security_group_id": "sg-07c1e9c6c931763e5",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gerador-dev.aws_security_group.cluster",
            "module.gerador-dev.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3073881185",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016f5b7c5cf5e792c",
            "security_group_rule_id": "sgr-028456d7ceb98fe9f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gerador-dev.aws_security_group.cluster",
            "module.gerador-dev.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3798383918",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016f5b7c5cf5e792c",
            "security_group_rule_id": "sgr-0e30e6e3eb0e5ebb7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gerador-dev.aws_security_group.cluster",
            "module.gerador-dev.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1178148545",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-016f5b7c5cf5e792c",
            "security_group_rule_id": "sgr-0f357b0ea1c6da246",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gerador-dev.aws_security_group.cluster",
            "module.gerador-dev.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:network-acl/acl-080e17fa2ba6ed3f4",
            "default_network_acl_id": "acl-080e17fa2ba6ed3f4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-080e17fa2ba6ed3f4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "637423345847",
            "subnet_ids": [
              "subnet-02a9b418969f132c8",
              "subnet-05144f5223adeecc8",
              "subnet-05c8d9fca49b92c4b",
              "subnet-0963442665125dcf9",
              "subnet-0c0b3df28725ed1fc",
              "subnet-0c1152ccafffc9fec"
            ],
            "tags": {
              "Name": "gerador-dev-default",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-default",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:route-table/rtb-0eb9e66ca8565b4db",
            "default_route_table_id": "rtb-0eb9e66ca8565b4db",
            "id": "rtb-0eb9e66ca8565b4db",
            "owner_id": "637423345847",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gerador-dev-default",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-default",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:security-group/sg-0eb908523374c0dbb",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0eb908523374c0dbb",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "637423345847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gerador-dev-default",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-default",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075015248dc540bf3",
            "arn": "arn:aws:ec2:us-east-1:637423345847:elastic-ip/eipalloc-075015248dc540bf3",
            "association_id": "eipassoc-03dd67ef7f69bc2b0",
            "domain": "vpc",
            "id": "eipalloc-075015248dc540bf3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b08d3790cc6740c4",
            "private_dns": "ip-10-0-4-89.ec2.internal",
            "private_ip": "10.0.4.89",
            "public_dns": "ec2-44-216-207-115.compute-1.amazonaws.com",
            "public_ip": "44.216.207.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gerador-dev-us-east-1a",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-us-east-1a",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:internet-gateway/igw-0382b0e1085a30372",
            "id": "igw-0382b0e1085a30372",
            "owner_id": "637423345847",
            "tags": {
              "Name": "gerador-dev",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075015248dc540bf3",
            "association_id": "eipassoc-03dd67ef7f69bc2b0",
            "connectivity_type": "public",
            "id": "nat-03d6cde5222528234",
            "network_interface_id": "eni-0b08d3790cc6740c4",
            "private_ip": "10.0.4.89",
            "public_ip": "44.216.207.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c0b3df28725ed1fc",
            "tags": {
              "Name": "gerador-dev-us-east-1a",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-us-east-1a",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-029c6d136e320ce681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03d6cde5222528234",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-029c6d136e320ce68",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0382b0e1085a30372",
            "id": "r-rtb-0b8691540d9d6ed6e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b8691540d9d6ed6e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:route-table/rtb-029c6d136e320ce68",
            "id": "rtb-029c6d136e320ce68",
            "owner_id": "637423345847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03d6cde5222528234",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gerador-dev-private",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-private",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:route-table/rtb-0b8691540d9d6ed6e",
            "id": "rtb-0b8691540d9d6ed6e",
            "owner_id": "637423345847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0382b0e1085a30372",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gerador-dev-public",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-public",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e54b4024c650d2b",
            "route_table_id": "rtb-029c6d136e320ce68",
            "subnet_id": "subnet-0c1152ccafffc9fec"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0991ad81ec1c33577",
            "route_table_id": "rtb-029c6d136e320ce68",
            "subnet_id": "subnet-0963442665125dcf9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0921b8135c2575cfd",
            "route_table_id": "rtb-029c6d136e320ce68",
            "subnet_id": "subnet-05c8d9fca49b92c4b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0063fae0bd779b04e",
            "route_table_id": "rtb-0b8691540d9d6ed6e",
            "subnet_id": "subnet-0c0b3df28725ed1fc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088812f6d311de814",
            "route_table_id": "rtb-0b8691540d9d6ed6e",
            "subnet_id": "subnet-02a9b418969f132c8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0668a5ef38e2388a1",
            "route_table_id": "rtb-0b8691540d9d6ed6e",
            "subnet_id": "subnet-05144f5223adeecc8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:subnet/subnet-0c1152ccafffc9fec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1152ccafffc9fec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423345847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gerador-dev-private-us-east-1a",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-private-us-east-1a",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:subnet/subnet-0963442665125dcf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0963442665125dcf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423345847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gerador-dev-private-us-east-1b",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-private-us-east-1b",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:subnet/subnet-05c8d9fca49b92c4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c8d9fca49b92c4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423345847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gerador-dev-private-us-east-1c",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-private-us-east-1c",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:subnet/subnet-0c0b3df28725ed1fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0b3df28725ed1fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423345847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gerador-dev-public-us-east-1a",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-public-us-east-1a",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:subnet/subnet-02a9b418969f132c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a9b418969f132c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423345847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gerador-dev-public-us-east-1b",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-public-us-east-1b",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:subnet/subnet-05144f5223adeecc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05144f5223adeecc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423345847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gerador-dev-public-us-east-1c",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev-public-us-east-1c",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "vpc_id": "vpc-01c7e2f2a608b61a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423345847:vpc/vpc-01c7e2f2a608b61a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080e17fa2ba6ed3f4",
            "default_route_table_id": "rtb-0eb9e66ca8565b4db",
            "default_security_group_id": "sg-0eb908523374c0dbb",
            "dhcp_options_id": "dopt-007379d7d4d0443e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c7e2f2a608b61a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb9e66ca8565b4db",
            "owner_id": "637423345847",
            "tags": {
              "Name": "gerador-dev",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            },
            "tags_all": {
              "Name": "gerador-dev",
              "kubernetes.io/cluster/elb": "1",
              "kubernetes.io/cluster/gerador": "shared"
            }
          }
        }
      ]
    }
  ]
}